crates/nash-can/tests/snapshots/kinds__generated_capture_outside_finite_fragment_is_not_an_infinite_kind.snap
---
source: crates/nash-can/tests/kinds.rs
description: "type tag 'a = Tag\ntype option 'a = Some 'a\ntype app 'f 'a = App ('f 'a)\ntype wrap 'f 'g 'a = Wrap ('f ('g 'a))\ntype w = W (wrap (app tag) app option)"
---
[
    KindRestricted {
        region: Region {
            start: Position {
                line: 9,
                column: 13,
            },
            end: Position {
                line: 9,
                column: 38,
            },
        },
        context: LittleField {
            union: "w",
            ctor: "W",
            index: 0,
        },
        reason: "a generated constructor capture is not an input atom",
    },
]
