crates/nash-can/tests/snapshots/kinds__higher_kinded_parameter.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype wrap 'f 'a = Wrap ('f 'a)\n"
---
(
    [
        (
            "wrap",
            Arrow(
                Arrow(
                    Type,
                    Type,
                ),
                Arrow(
                    Type,
                    Type,
                ),
            ),
            [
                Apply {
                    head: Located {
                        region: Region {
                            start: Position {
                                line: 6,
                                column: 25,
                            },
                            end: Position {
                                line: 6,
                                column: 27,
                            },
                        },
                        value: Var(
                            "f",
                        ),
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 6,
                                    column: 28,
                                },
                                end: Position {
                                    line: 6,
                                    column: 30,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            ],
        ),
    ],
    [],
)
