crates/nash-can/tests/snapshots/kinds__impl_head_rejects_inconsistent_higher_kinded_arguments.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype tag 'a = Tag\ntype option 'a = Some 'a\ntype app 'f 'a = App ('f 'a)\ntype wrap 'f 'g 'a = Wrap ('f ('g 'a))\ntrait Marker 'a where\n    marker : 'a -> unit\nimpl Marker (wrap (app tag) app option) where\n    marker x = ()\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in head 1 of impl `Main.Marker`.
    ╭─[src/Main.nash:12:29]
 11 │     marker : 'a -> unit
 12 │ impl Marker (wrap (app tag) app option) where
    ·                             ───
 13 │     marker x = ()
    ╰────
  help: Expected kind `Type`, found `Type -> Type`.
