crates/nash-can/tests/snapshots/kinds__independent_instantiations.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype option 'a = None | Some 'a\ntype both = Both (option Int) (option int)\n"
---
(
    [
        (
            "option",
            Arrow(
                Type,
                Type,
            ),
            [],
        ),
        (
            "both",
            Type,
            [],
        ),
    ],
    [],
)
