crates/nash-can/tests/snapshots/kinds__infinite_kind.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype bad 'f = Bad (bad bad)\n"
info: diagnostic
---
nash::names::kind_infinite

  × This application in field 1 of little constructor `Bad` in `bad` would require
  │ an infinite kind:
   ╭─[src/Main.nash:6:24]
 5 │ 
 6 │ type bad 'f = Bad (bad bad)
   ·                        ───
   ╰────
  help: Check the type application and the kinds of its arguments.
