crates/nash-can/tests/snapshots/kinds__inline_representation_predicates_reject_contradictory_repeated_variables.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype small 'a = Small (pair ('a : Big) ('a : Const))\n"
info: diagnostic
---
nash::names::contradictory_representation

  × The representation requirements on 'a are incompatible:
   ╭─[src/Main.nash:6:41]
 5 │ 
 6 │ type small 'a = Small (pair ('a : Big) ('a : Const))
   ·                                         ──
   ╰────
  help: Change the incompatible constraints or uses of this variable.
