crates/nash-can/tests/snapshots/kinds__kind_annotation_arrow_mismatch.snap
---
source: crates/nash-can/tests/kinds.rs
description: "type wrap ('f : Big) 'a = Wrap ('f 'a)"
---
[
    KindMismatch {
        region: Region {
            start: Position {
                line: 5,
                column: 17,
            },
            end: Position {
                line: 5,
                column: 20,
            },
        },
        context: ParamAnnotation {
            type_name: "wrap",
            param: "f",
        },
        expected: KindScheme {
            bounds: [],
            kind: Base(
                Big,
            ),
            applications: [],
        },
        actual: KindScheme {
            bounds: [
                KindSet(
                    8,
                ),
                KindSet(
                    15,
                ),
                KindSet(
                    7,
                ),
            ],
            kind: Var(
                0,
            ),
            applications: [
                KindApplication {
                    head: Var(
                        0,
                    ),
                    argument: Var(
                        1,
                    ),
                    result: Var(
                        2,
                    ),
                },
            ],
        },
    },
]
