crates/nash-can/tests/snapshots/kinds__kind_annotation_fix.snap
---
source: crates/nash-can/tests/kinds.rs
description: "type Fix ('f : Big -> Big) = Fix ('f (Fix 'f))"
---
(
    [
        (
            "Fix",
            KindScheme {
                bounds: [],
                kind: Arrow(
                    Arrow(
                        Base(
                            Big,
                        ),
                        Base(
                            Big,
                        ),
                    ),
                    Base(
                        Big,
                    ),
                ),
                applications: [],
            },
        ),
    ],
    [],
)
